--- a/client/src/components/editor/components/Toolbox.scss
+++ b/client/src/components/editor/components/Toolbox.scss
@@ -45,11 +45,12 @@
         right: 2px;
         top: 2px;
         line-height: 1;
-        width: 20px;
         background-color: #ffffff73;
         height: 20px;
+        font-size: 12px;
         display: flex;
-        border-radius: 50%;
+        border-radius: 5px;
+        padding: 5px;
         align-items: center;
         justify-content: center;
     }
