feat: add evnmap, skybox, more textures, alphamap

--- a/client/src/components/editor/components/Toolbox.scss
+++ b/client/src/components/editor/components/Toolbox.scss
@@ -59,3 +59,10 @@
     width: 48%;
     height: 65px;
 }
+
+.toolbox-infotable {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 250px;
+}
