--- a/client/src/components/editor/index.scss
+++ b/client/src/components/editor/index.scss
@@ -1,4 +1,5 @@
 .toolbar-container {
+    z-index: 999;
     position: absolute;
     text-align: left;
     padding: 0 25px 0 10px;
@@ -19,4 +20,14 @@
 
 .toolbar-container:focus-within {
     transform: translateX(0px);
+}
+
+#scene {
+    width: 100%;
+    height: 100vh;
+    width: calc(100% - 200px);
+    height: calc(100vh - 110px);
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
